--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk{
+            // 设置支持的 SO 库构架，注意这里要根据你的实际情况来设置
             abiFilters "armeabi-v7a", "x86"
         }
     }
